--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.51.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
@@ -40,9 +40,10 @@
     "zod": "^3.23.5"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
