--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.3.6",
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
