--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^11.3.6",
     "lucide-react": "^0.377.0",
     "next": "14.2.3",
+    "next-intl": "^3.17.1",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
