--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.11.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
@@ -31,11 +32,12 @@
     "embla-carousel-react": "^8.0.2",
     "framer-motion": "^11.3.6",
     "lucide-react": "^0.377.0",
-    "next": "^14.2.14",
+    "next": "^14.2.20",
     "next-intl": "^3.17.1",
     "next-themes": "^0.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@types/react": "^18.3.12",
     "react-hook-form": "^7.51.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
@@ -46,8 +48,8 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.14.10",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
